--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
-discord-py-interactions==5.5.1
+discord-py-interactions
 discord-typings==0.5.1
 emoji==2.2.0
 frozenlist==1.3.3
