--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ async-timeout==4.0.2
 attrs==23.1.0
 certifi==2023.5.7
 charset-normalizer==3.1.0
-discord-py-interactions
+discord-py-interactions==5.5.1
 discord-typings==0.5.1
 emoji==2.2.0
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
+python-dotenv==1.0.0
 requests==2.30.0
 tomli==2.0.1
 tqdm==4.65.0
