--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 discord-py-interactions==5.5.1
@@ -13,6 +14,7 @@ multidict==6.0.4
 Pillow==10.0.0
 python-dotenv==1.0.0
 requests==2.30.0
+soupsieve==2.4.1
 tomli==2.0.1
 tqdm==4.65.0
 typing_extensions==4.5.0
