--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /cogs/module
-/cogs/dist/mltdevent/data/*.json
 /venv
 
 .env
 
-token.json
-scope.json
+config.json
+headers.json
 
 **/__pycache__
 cache
