--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Pillow==10.1.0
 python-dotenv==1.0.0
 requests==2.31.0
 soupsieve==2.5
+tinydb==4.8.0
 tomli==2.0.1
 tqdm==4.66.1
 typing_extensions==4.8.0
