--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-aiosignal==1.3.1
 aiohttp==3.9.3
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -12,10 +13,21 @@ discord-typings==0.7.0
 distro==1.9.0
 emoji==2.10.1
 frozenlist==1.4.1
+google-ai-generativelanguage==0.6.2
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.5.2
+googleapis-common-protos==1.63.0
+grpcio==1.62.0
+grpcio-status==1.62.0
 h11==0.14.0
 httpcore==1.0.4
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.6
+install==1.3.5
 multidict==6.0.5
 mypy-extensions==1.0.0
 openai==1.12.0
@@ -23,15 +35,22 @@ packaging==23.2
 pathspec==0.12.1
 pillow==10.2.0
 platformdirs==4.2.0
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pydantic==2.6.2
 pydantic_core==2.16.3
+pyparsing==3.1.2
 python-dotenv==1.0.1
 requests==2.31.0
+rsa==4.9
 sniffio==1.3.1
 soupsieve==2.5
 tinydb==4.8.0
 tomli==2.0.1
 tqdm==4.66.2
 typing_extensions==4.9.0
+uritemplate==4.1.1
 urllib3==2.2.1
 yarl==1.9.4
