--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-aiohttp==3.9.5
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
-attrs==23.2.0
-certifi==2024.7.4
+attrs==24.2.0
+certifi==2024.8.30
 charset-normalizer==3.3.2
 discord.py==2.4.0
 frozenlist==1.4.1
-idna==3.7
-multidict==6.0.5
+idna==3.9
+multidict==6.1.0
 python-dotenv==1.0.1
 requests==2.32.3
-urllib3==2.2.2
-yarl==1.9.4
+tinydb==4.8.0
+urllib3==2.2.3
+yarl==1.11.1
