--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-attrs==24.2.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-discord.py==2.4.0
-frozenlist==1.4.1
-idna==3.9
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+attrs==25.1.0
+audioop-lts==0.2.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+discord.py==2.5.0
+frozenlist==1.5.0
+idna==3.10
 multidict==6.1.0
+propcache==0.2.1
 python-dotenv==1.0.1
 requests==2.32.3
-tinydb==4.8.0
-urllib3==2.2.3
-yarl==1.11.1
+tinydb==4.8.2
+urllib3==2.3.0
+yarl==1.18.3
