--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1.89"
 dotenv = "0.15.0"
+html-escape = "0.2.13"
 regex = "1.12.2"
 reqwest = "0.12.24"
 serde_json = "1.0.145"
